--- a/index.html
+++ b/index.html
@@ -158,7 +158,12 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <div class="container-fluid for-bg-color" style="background-color: #EAEDED;">
+      
+
     </div>
+    </div>
+   
     <!-- cards -->
     <div
       class="container-fluid row Card-main"
